fix overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,7 +24,6 @@
   .columns.is-wrap-reverse-touch {
     display: flex;
     flex-direction: column-reverse;
-    flex-wrap: wrap;
   }
 }
 
